--- a/source/index.html
+++ b/source/index.html
@@ -17,15 +17,15 @@
     </div>
     <nav class="main-nav">
       <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--index">
-            <a class="site-list__link" href="#">Главная</a>
+        <ul class="main-nav__list site-navigation">
+          <li class="site-navigation__item site-navigation__item--index">
+            <a class="site-navigation__link" href="#">Главная</a>
           </li>
-          <li class="site-list__item site-list__item--catalog">
-            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+          <li class="site-navigation__item site-navigation__item--catalog">
+            <a class="site-navigation__link" href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="site-list__item site-list__item--programs">
-            <a class="site-list__link" href="#">Подбор Программы</a>
+          <li class="site-navigation__item site-navigation__item--programs">
+            <a class="site-navigation__link" href="form.html">Подбор Программы</a>
           </li>
         </ul>
       </div>
