--- a/source/index.html
+++ b/source/index.html
@@ -46,14 +46,14 @@
     <section class="advantages">
       <h2 class="visually-hidden">Выбор программы</h2>
       <ul class="advantages__list">
-        <li class="advantages__item">
-          <h3 class="advantages__title advantages__title--sit-before advantages__title--sit-after">Похудение</h3>
+        <li class="advantages__item advantages__item--sit-before advantages__item--sit-after">
+          <h3 class="advantages__title">Похудение</h3>
           <p class="advantages__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
             Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="advantages__link" href="#">Каталог slim</a>
         </li>
-        <li class="advantages__item">
-          <h3 class="advantages__title advantages__title--stand-before advantages__title--stand-after">Набор массы</h3>
+        <li class="advantages__item advantages__item--stand-before advantages__item--stand-after">
+          <h3 class="advantages__title">Набор массы</h3>
           <p class="advantages__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
             Pro
             поможет вашему коту нарастить необходимые мышцы!</p>
@@ -65,16 +65,16 @@
       <h2 class="features__title">Как это работает</h2>
       <ul class="features__list">
         <li class="features__item features__item--sheet">
-          Функциональное питание содержит только полезные питательные вещества.
+          <p class="features__text">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
         <li class="features__item features__item--tank">
-          Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          <p class="features__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
         </li>
         <li class="features__item features__item--tableware">
-          Замените один-два приема обычной еды на наше функциональное питание.
+          <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
         <li class="features__item features__item--clock">
-          Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
     </section>
@@ -99,11 +99,11 @@
       <div class="example__illustration-slider example__slider">
         <ul class="example__slider-list">
           <li class="example__slider-item">
-            <img class="example__illustration-img" src="img/before-mobile@1x.png" width="320" height="240"
+            <img class="example__img-slim" src="img/before-mobile@1x.png" width="320" height="240"
               alt="Ваша кошка До замены обычного корма, на корм Cat Energy Slim">
           </li>
           <li class="example__slider-item">
-            <img class="example__illustration-img" src="img/after-mobile@1x.png" width="320" height="240"
+            <img class="example__img-pro" src="img/after-mobile@1x.png" width="320" height="240"
               alt="Ваша кошка После замены обычного корма, на корм Cat Energy Slim">
           </li>
         </ul>
@@ -126,22 +126,37 @@
       <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" width="320" height="400"
         alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </section>
-    <a class="footer__logo">
-      <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24"
-        alt="логотип Cat Energy">
-    </a>
-    <ul class="footer__social-list">
-      <li class="footer__social-item"><a class="footer__social-link footer__social-link--vk" href="#">Вконтакте</a></li>
-      <li class="footer__social-item"><a class="footer__social-link footer__social-link--inst" href="#">Инстаграм</a>
-      </li>
-      <li class="footer__social-item"><a class="footer__social-link footer__social-link--fb" href="#">Фейсбук</a></li>
-    </ul>
-    <div class="footer__academy">
-      <p class="footer__academy-name">HTML Academy</p>
-      <div class="footer__academy-wrapper">
+    <div class="footer__social-wrapper">
+      <a class="footer__logo">
+        <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24"
+          alt="логотип Cat Energy">
+      </a>
+      <ul class="footer__social-list">
+        <li class="footer__social-item"><a class="footer__social-link footer__social-link--vk" href="#">Вконтакте
+          <svg class="footer__social-img" width="22" height="12" viewBox="0 0 22 12">
+            <path
+              d="M17.6 12c-.3 0-.9-.1-1.5-.5-.5-.3-.9-.7-1.3-1.2-.3-.3-.9-.9-1.1-.9-.2.1-.4.7-.3 1.2 0 .1 0 .6-.3.9-.3.3-.8.4-.9.4h-1.4c-.7 0-3.2-.2-5.4-2.3C2.5 7.1.2 2.2.1 2 0 1.6-.1 1.2.2.9s.8-.4 1-.4h3.1c.1 0 .4.1.7.3.3.2.4.5.5.6.7 1.5 1.5 2.8 2.6 4 .1-.4.2-1.4.1-2.3 0-.4-.1-.8-.2-1-.1-.1-.3-.2-.5-.2l-.6-.5c0-.5.5-.9.9-1.1.5-.2 1.3-.3 2.3-.3h.5c.9 0 1.2.1 1.6.1 1.2.3 1.2 1.3 1.1 2.5v1.6c0 .3 0 .8.1 1 .2-.1.6-.5 1.5-1.9.6-.9 1-1.9 1.1-2.1.1-.3.4-.7 1.2-.7h3.4c.7 0 1.2.2 1.3.7.2.5.1 1.3-1.7 3.5-.3.3-.5.6-.7.9-.5.4-.9 1-.9 1.1s.5.5.9.9c1.1.9 1.9 1.7 2.2 2.3.4.6.3 1 .2 1.3-.3.7-1.2.7-1.4.8h-2.8-.1zm-3.9-3.7c.7 0 1.2.6 1.8 1.2.4.4.7.8 1.1 1 .5.3 1 .3 1 .3h2.9c.1 0 .3-.1.4-.1 0 0 0-.1-.1-.1-.3-.5-1-1.3-2-2.1-.9-.7-1.3-1.1-1.4-1.7 0-.6.4-1.1 1.2-2.1.2-.2.4-.5.7-.8 1.1-1.4 1.4-2 1.5-2.3h-3.9c0 .4-.5 1.5-1.1 2.4-1.4 2.1-2 2.4-2.5 2.4-.1 0-.3 0-.4-.1-.7-.4-.7-1.4-.7-2.1V2.6c.1-1.3 0-1.3-.3-1.4-.3-.1-.5-.1-1.4-.1H10c-.5 0-1 0-1.4.1l.2.2c.4.5.4 1.5.4 1.7.1 1.3 0 2.9-.7 3.3-.1 0-.2.1-.4.1-.6 0-1.3-.7-2.5-2.5C5 2.9 4.5 1.8 4.5 1.8s0-.1-.1-.1-.2-.1-.2-.1h-3c.4.9 2.5 5 4.8 7.2 2 1.9 4.3 2 4.7 2h1.4s.2 0 .2-.1v-.1c0-.2 0-2 1.2-2.3h.2z"/>
+          </svg>
+        </a></li>
+        <li class="footer__social-item"><a class="footer__social-link footer__social-link--inst" href="#">Инстаграм
+          <svg class="footer__social-img" width="17" height="17" version="1.1" x="0" y="0" viewBox="0 0 16.1 16" xml:space="preserve"><path class="st0" d="M11.8 1C13.6 1 15 2.4 15 4.2v7.7c0 1.7-1.4 3.1-3.1 3.1H4.2C2.4 15 1 13.6 1 11.8V4.2C1 2.4 2.4 1 4.2 1h7.6m0-1H4.2C1.9 0 0 1.9 0 4.2v7.7C0 14.1 1.9 16 4.2 16h7.7c2.3 0 4.2-1.9 4.2-4.2V4.2C16 1.9 14.1 0 11.8 0z"/><path class="st0" d="M8 4.9c1.7 0 3.1 1.4 3.1 3.1S9.7 11.1 8 11.1 4.9 9.7 4.9 8 6.3 4.9 8 4.9m0-1C5.7 3.9 3.9 5.7 3.9 8s1.8 4.1 4.1 4.1 4.1-1.8 4.1-4.1S10.3 3.9 8 3.9z"/><circle class="st0" cx="12.3" cy="3.7" r=".9"/></svg>
+        </a>
+        </li>
+        <li class="footer__social-item"><a class="footer__social-link footer__social-link--fb" href="#">Фейсбук
+          <svg class="footer__social-img" width="10" height="19" viewBox="0 0 10 19">
+            <path
+              d="M7.1 19H2v-8.8H0V5.8h1.9c-.1-2 .2-3.4 1.1-4.4C3.8.5 5 .1 6.5 0H10v4.2H7.2c-.1.2-.2.8-.2 1.6h3v4.4H7.1V19zm-4-1h2.8V9.1h2.9V6.8H5.9v-.5c0-1.4 0-2.6.7-3.1l.1-.1h2.1V1H6.5c-1.2.1-2 .4-2.6 1-.8.8-1 2.3-.8 4.2l.1.6H1.1v2.3h2V18z"/>
+          </svg>
+        </a></li>
+
+      </ul>
+      <div class="footer__academy">
+        <p class="footer__academy-name">HTML Academy</p>
         <a class="footer__academy-link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__academy-img" src="img/htmlacademy.svg" width="27" height="34"
-            alt="Профессиональный онлайн‑курс HTML и CSS, уровень 2">
+          <svg class="footer__academy-img" width="27" height="34" viewBox="0 0 60 60">
+            <path
+              d="M30.2 5H30L10.3 7.1v36.2L30 55l19.7-11.7V7.1L30.2 5zm17 36.8L30 52 12.8 41.8V27l17.1 10.2V39l-11.7-7v1.8L30 40.9v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8L29.9 12.8 12.8 23V9.4L30 7.6l17.2 1.8V23z"/>
+          </svg>
         </a>
       </div>
     </div>
