Закончил адаптивную сетку на таблет

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,8 +40,6 @@
             <a class="product__img-link" href="#">
               <img class="product__img" src="img/chicken-small-mobile@1x.jpg" width="140" height="144"
                 alt="Корм Cat Energy PRO 500 г со вкусом курицы">
-              <img class="product__img-tablet" src="img/chicken-small-tablet@1x.png" width="324" height="172"
-                alt="Корм Cat Energy PRO 500 г со вкусом курицы">
             </a>
             <div class="product__wrapper-text">
               <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 500 г</a></h2>
@@ -62,7 +60,6 @@
             </div>
             <a class="product__button button" href="#">Заказать</a>
           </article>
-
         </li>
         <li class="product-catalog__item">
           <article class="product">
@@ -87,8 +84,8 @@
                 </div>
               </div>
             </div>
+            <a class="product__button button" href="#">Заказать</a>
           </article>
-          <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="product-catalog__item">
           <article class="product">
@@ -98,21 +95,23 @@
             </a>
             <div class="product__wrapper-text">
               <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 500 г</a></h2>
-              <div class="product__description-wrapper">
-                <p class="product__description-name">Объем</p>
-                <p class="product__description-value">500 г</p>
-              </div>
-              <div class="product__description-wrapper">
-                <p class="product__description-name">Вкус</p>
-                <p class="product__description-value">Рыба</p>
-              </div>
-              <div class="product__description-wrapper">
-                <p class="product__description-name">Цена</p>
-                <p class="product__description-value">700 Р.</p>
+              <div class="product__description">
+                <div class="product__description-wrapper">
+                  <p class="product__description-name">Объем</p>
+                  <p class="product__description-value">500 г</p>
+                </div>
+                <div class="product__description-wrapper">
+                  <p class="product__description-name">Вкус</p>
+                  <p class="product__description-value">Рыба</p>
+                </div>
+                <div class="product__description-wrapper">
+                  <p class="product__description-name">Цена</p>
+                  <p class="product__description-value">700 Р.</p>
+                </div>
               </div>
             </div>
+            <a class="product__button button" href="#">Заказать</a>
           </article>
-          <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="product-catalog__item">
           <article class="product">
@@ -137,8 +136,8 @@
                 </div>
               </div>
             </div>
+            <a class="product__button button" href="#">Заказать</a>
           </article>
-          <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="product-catalog__item">
           <article class="product">
@@ -163,8 +162,8 @@
                 </div>
               </div>
             </div>
+            <a class="product__button button" href="#">Заказать</a>
           </article>
-          <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="product-catalog__item">
           <article class="product">
@@ -189,13 +188,14 @@
                 </div>
               </div>
             </div>
+            <a class="product__button button" href="#">Заказать</a>
           </article>
-          <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="product-catalog__item">
           <article class="product">
             <a class="product__img-link" href="#">
-              <img class="product__img" src="img/rice-small-mobile@1x.jpg" width="140" height="144"
+              <!--Для демонстрации заменил картинку на таблет-->
+              <img class="product__img" src="img/rice-small-tablet@1x.png" width="324" height="174"
                 alt="Корм Cat Energy PRO 500 г со вкусом риса">
             </a>
             <div class="product__wrapper-text">
@@ -215,17 +215,19 @@
                 </div>
               </div>
             </div>
+            <a class="product__button button" href="#">Заказать</a>
           </article>
-          <a class="product__button button" href="#">Заказать</a>
+        </li>
+        <li class="product-catalog__item">
+          <article class="more-products">
+            <img class="more-products__plus" src="img/icon-plus-mobile.svg" width="31" height="31"
+              alt="Показать больше товаров">
+            <h2 class="more-products__title">Показать еще 100500 товаров</h2>
+            <p class="more-products__description">На самом деле вкусов гораздо больше!</p>
+            <a class="more-products__button-link" href="#">Показать все</a>
+          </article>
         </li>
       </ul>
-    </section>
-    <section class="more-products">
-      <img class="more-products__plus" src="img/icon-plus-mobile.svg" width="31" height="31"
-        alt="Показать больше товаров">
-      <h2 class="more-products__title">Показать еще 100500 товаров</h2>
-      <p class="more-products__description">На самом деле вкусов гораздо больше!</p>
-      <a class="more-products__button-link" href="#">Показать все</a>
     </section>
     <section class="additional-products">
       <h2 class="additional-products__title">Дополнительные товары</h2>
