--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="utf-8">
   <title>Кэт энерджи - Функциональное питание для котов</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
