Работа над каталогом - адаптивные сетки

--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
 <header class="page-header">
   <div class="page-header__nav-header">
     <a class="page-header__logo-link">
@@ -41,6 +40,8 @@
           <p class="hero__subtitle">Занялся собой? Займись котом!</p>
         </div>
       </div>
+    </div>
+    <div class="hero__wrapper--desktop">
       <div class="container">
         <div class="hero__wrapper-img">
           <img class="hero__img" src="img/index-can-mobile@1x.png" width="280" height="271"
