--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 <body>
 <header class="page-header">
   <div class="container container--mobil">
-    <nav class="main-nav main-nav--opened">
+    <nav class="main-nav main-nav--nojs">
       <div class="main-nav__wrapper-head">
         <a class="main-nav__logo-link">
           <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39"
