--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,8 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-          <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39" alt="Питание для котов Cat Energy">
+          <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39"
+            alt="Питание для котов Cat Energy">
         </picture>
         <a class="main-nav__logo-link">
         </a>
@@ -48,9 +49,11 @@
         </div>
         <div class="hero__wrapper-img">
           <picture>
-            <source media="(min-width: 1440px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 1440px)"
+              srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
-            <img class="hero__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Питание Cat Energy Pro со вкусом курицы">
+            <img class="hero__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x"
+              alt="Питание Cat Energy Pro со вкусом курицы">
           </picture>
         </div>
       </div>
@@ -103,39 +106,46 @@
   <section class="example">
     <div class="container">
       <h2 class="example__title">Живой пример</h2>
-      <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
-        Slim.
-        Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
-        в день. </p>
-      <ul class="example__illustration-list">
-        <li class="example__illustration-item">
-          <p class="example__illustration-value example__illustration-value--border-weight">5 кг</p>
-          <p class="example__illustration-description">снижение веса</p>
-        </li>
-        <li class="example__illustration-item">
-          <p class="example__illustration-value example__illustration-value--border-day">60 дней</p>
-          <p class="example__illustration-description">затрачено времени</p>
-        </li>
-      </ul>
-      <p class="example__illustration-price">Затраты на питание: 15 000 руб.</p>
-      <div class="example__illustration-slider example__slider">
-        <ul class="example__slider-list">
-          <li class="example__slider-item">
-            <img class="example__img-slim" src="img/before-mobile@1x.png" width="320" height="240"
-              alt="Ваша кошка До замены обычного корма, на корм Cat Energy Slim">
-          </li>
-          <li class="example__slider-item">
-            <img class="example__img-pro" src="img/after-mobile@1x.png" width="320" height="240"
-              alt="Ваша кошка После замены обычного корма, на корм Cat Energy Slim">
-          </li>
-        </ul>
-      </div>
-      <div class="example__illustration-toggle">
-        <button class="example__illustration-button" type="button">Было</button>
-        <div class="example__illustration-scale">
-          <div class="example__illustration-bar example__illustration-bar--after"></div>
+      <div class="example__wrapper">
+        <div class="example__advantages-wrapper">
+          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+            Slim.
+            Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
+            часов
+            в день. </p>
+          <div class="example__value-wrapper">
+            <ul class="example__illustration-list">
+              <li class="example__illustration-item">
+                <p class="example__illustration-value example__illustration-value--border-weight">5 кг</p>
+                <p class="example__illustration-description example__illustration-description--weight">снижение веса</p>
+              </li>
+              <li class="example__illustration-item">
+                <p class="example__illustration-value example__illustration-value--border-day">60 дней</p>
+                <p class="example__illustration-description">затрачено времени</p>
+              </li>
+            </ul>
+            <p class="example__illustration-price">Затраты на питание: <span>15 000 руб.</span></p>
+          </div>
         </div>
-        <button class="example__illustration-button" type="button">Стало</button>
+        <div class="example__illustration-slider example__slider">
+          <ul class="example__slider-list">
+            <li class="example__slider-item">
+              <img class="example__img-slim" src="img/before-mobile@1x.png" width="320" height="240"
+                alt="Ваша кошка До замены обычного корма, на корм Cat Energy Slim">
+            </li>
+            <li class="example__slider-item">
+              <img class="example__img-pro" src="img/after-mobile@1x.png" width="320" height="240"
+                alt="Ваша кошка После замены обычного корма, на корм Cat Energy Slim">
+            </li>
+          </ul>
+        </div>
+        <div class="example__illustration-toggle">
+          <button class="example__illustration-button" type="button">Было</button>
+          <div class="example__illustration-scale">
+            <div class="example__illustration-bar example__illustration-bar--after"></div>
+          </div>
+          <button class="example__illustration-button" type="button">Стало</button>
+        </div>
       </div>
     </div>
   </section>
