--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,20 +15,17 @@
           <picture>
             <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39" alt="Питание для котов Cat Energy">
+            <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39"
+              alt="Питание для котов Cat Energy">
           </picture>
-        </a>
-        <a class="main-nav__toggle main-nav__toggle--opened">Меню</a>
+        </a> <a class="main-nav__toggle main-nav__toggle--opened">Меню</a>
       </div>
       <ul class="main-nav__list site-navigation">
         <li class="site-navigation__item">
-          <a
-            class="site-navigation__link"
-            href="index.html">Главная</a>
+          <a class="site-navigation__link" href="index.html">Главная</a>
         </li>
         <li class="site-navigation__item">
-          <a class="site-navigation__link site-navigation__link--active">Каталог
-            продукции</a>
+          <a class="site-navigation__link site-navigation__link--active">Каталог продукции</a>
         </li>
         <li class="site-navigation__item">
           <a class="site-navigation__link" href="form.html">Подбор Программы</a>
@@ -49,9 +46,12 @@
             <article class="product">
               <a class="product__img-link" href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-                  <img class="product__img" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом курицы">
+                  <source media="(min-width: 1440px)"
+                    srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                  <img class="product__img" src="img/chicken-small-mobile@1x.jpg"
+                    srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом курицы">
                 </picture>
               </a>
               <div class="product__wrapper-text">
@@ -80,9 +80,12 @@
             <article class="product">
               <a class="product__img-link" href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                  <img class="product__img" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
+                  <source media="(min-width: 1440px)"
+                    srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                  <img class="product__img" src="img/chicken-big-mobile@1x.jpg"
+                    srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
                 </picture>
               </a>
               <div class="product__wrapper-text">
@@ -111,8 +114,10 @@
             <article class="product">
               <a class="product__img-link" href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                  <source media="(min-width: 1440px)"
+                    srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
                   <img class="product__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x"
                     alt="Корм Cat Energy PRO 500 г со вкусом рыбы">
                 </picture>
@@ -143,8 +148,10 @@
             <article class="product">
               <a class="product__img-link" href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                  <source media="(min-width: 1440px)"
+                    srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
                   <img class="product__img" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x"
                     alt="Корм Cat Energy PRO 1000 г со вкусом рыбы">
                 </picture>
@@ -175,10 +182,12 @@
             <article class="product">
               <a class="product__img-link" href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-                  <img class="product__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x"
-                    alt="Корм Cat Energy PRO 500 г со вкусом гречки">
+                  <source media="(min-width: 1440px)"
+                    srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                  <img class="product__img" src="img/buckwheat-small-mobile@1x.jpg"
+                    srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом гречки">
                 </picture>
               </a>
               <div class="product__wrapper-text">
@@ -207,12 +216,14 @@
             <article class="product">
               <a class="product__img-link" href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-                  <img class="product__img" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x"
-                    alt="Корм Cat Energy PRO 1000 г со вкусом гречки">
+                  <source media="(min-width: 1440px)"
+                    srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                  <img class="product__img" src="img/buckwheat-big-mobile@1x.jpg"
+                    srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 1000 г со вкусом гречки">
                 </picture>
-                </a>
+              </a>
               <div class="product__wrapper-text">
                 <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy Slim 1000 г</a></h2>
                 <div class="product__description">
@@ -239,8 +250,10 @@
             <article class="product">
               <a class="product__img-link" href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                  <source media="(min-width: 1440px)"
+                    srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
                   <img class="product__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x"
                     alt="Корм Cat Energy PRO 500 г со вкусом риса">
                 </picture>
@@ -269,9 +282,8 @@
         <li class="product-catalog__item">
           <article class="more-products">
             <img class="more-products__plus" src="img/icon-plus-mobile.svg" width="31" height="31"
-              alt="Показать больше товаров">
-            <img class="more-products__plus--nomobil" src="img/icon-plus.svg" width="61" height="61"
-              alt="Показать больше товаров">
+              alt="Показать больше товаров"> <img class="more-products__plus--nomobil" src="img/icon-plus.svg"
+            width="61" height="61" alt="Показать больше товаров">
             <h2 class="more-products__title">Показать еще 100500 товаров</h2>
             <p class="more-products__description">На самом деле вкусов гораздо больше!</p>
             <a class="more-products__button-link" href="#">Показать все</a>
@@ -281,7 +293,9 @@
     </div>
   </section>
   <section class="additional-products">
-    <h2 class="additional-products__title">Дополнительные товары</h2>
+    <div class="additional-products__title-wrapper">
+      <h2 class="additional-products__title">Дополнительные товары</h2>
+    </div>
     <ul class="additional-products__list">
       <li class="additional-products__item">
         <article class="additional-card">
@@ -341,10 +355,8 @@
   <div class="footer__social">
     <div class="container">
       <div class="footer__social-wrapper">
-        <a class="footer__logo">
-          <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24"
-            alt="логотип Cat Energy">
-        </a>
+        <a class="footer__logo"> <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24"
+          alt="логотип Cat Energy"> </a>
         <ul class="footer__social-list">
           <li class="footer__social-item"><a class="footer__social-link footer__social-link--vk" href="#">Вконтакте
             <svg class="footer__social-img footer__social-img--vk" width="22" height="12" viewBox="0 0 22 12">
