--- a/source/index.html
+++ b/source/index.html
@@ -158,7 +158,7 @@
 <footer class="footer">
   <section class="footer__collaboration collaboration">
     <div class="collaboration__wrapper collaboration__wrapper--index">
-      <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
+      <h2 class="collaboration__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
       <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 <span class="collaboration__address--city">Санкт-Петербург</span>
       </p>
     </div>
