Закончил оновную часть работ по главной и каталогу

--- a/source/index.html
+++ b/source/index.html
@@ -43,7 +43,7 @@
         <div class="hero__wrapper-title">
           <h1 class="hero__title">Функциональное<br> питание для котов</h1>
           <p class="hero__subtitle">Занялся собой? Займись котом!</p>
-          <a class="hero__button button" href="#">Подобрать програму</a>
+          <a class="hero__button button" href="form.html">Подобрать програму</a>
         </div>
         <div class="hero__wrapper-img">
           <picture>
