--- a/source/catalog.html
+++ b/source/catalog.html
@@ -294,73 +294,84 @@
   </section>
   <section class="additional-products">
     <div class="additional-products__title-wrapper">
-      <h2 class="additional-products__title">Дополнительные товары</h2>
+      <div class="container container--mobile">
+        <h2 class="additional-products__title">Дополнительные товары</h2>
+      </div>
     </div>
     <div class="container">
-      <ul class="additional-products__list">
-        <li class="additional-products__item">
-          <article class="additional-card">
-            <div class="additional-card__value-wrapper">
-              <h3 class="additional-card__title">Сахарозаменитель</h3>
-              <div class="additional-card__description">
-                <p class="additional-card__value">1 упаковка (100 г)</p>
-                <p class="additional-card__price">200 Р.</p>
+      <div class="additional-products__wrapper">
+        <ul class="additional-products__list">
+          <li class="additional-products__item">
+            <article class="additional-card">
+              <div class="additional-card__value-wrapper">
+                <h3 class="additional-card__title">Сахарозаменитель</h3>
+                <div class="additional-card__description">
+                  <p class="additional-card__value">1 упаковка (100 г)</p>
+                  <p class="additional-card__price">200 Р.</p>
+                </div>
               </div>
-            </div>
-            <a class="additional-card__button button" href="#">Заказать</a>
-          </article>
-        </li>
-        <li class="additional-products__item">
-          <article class="additional-card">
-            <div class="additional-card__value-wrapper">
-              <h3 class="additional-card__title ">Питьевая вода</h3>
-              <div class="additional-card__description">
-                <p class="additional-card__value additional-card__value--water">5 литров</p>
-                <p class="additional-card__price">50 Р.</p>
+              <a class="additional-card__button button" href="#">Заказать</a>
+            </article>
+          </li>
+          <li class="additional-products__item">
+            <article class="additional-card">
+              <div class="additional-card__value-wrapper">
+                <h3 class="additional-card__title ">Питьевая вода</h3>
+                <div class="additional-card__description">
+                  <p class="additional-card__value additional-card__value--water">5 литров</p>
+                  <p class="additional-card__price">50 Р.</p>
+                </div>
               </div>
-            </div>
-            <a class="additional-card__button button" href="#">Заказать</a>
-          </article>
-        </li>
-        <li class="additional-products__item">
-          <article class="additional-card">
-            <div class="additional-card__value-wrapper">
-              <h3 class="additional-card__title">Молоко</h3>
-              <div class="additional-card__description">
-                <p class="additional-card__value">1 литр</p>
-                <p class="additional-card__price">100 Р.</p>
+              <a class="additional-card__button button" href="#">Заказать</a>
+            </article>
+          </li>
+          <li class="additional-products__item">
+            <article class="additional-card">
+              <div class="additional-card__value-wrapper">
+                <h3 class="additional-card__title">Молоко</h3>
+                <div class="additional-card__description">
+                  <p class="additional-card__value">1 литр</p>
+                  <p class="additional-card__price">100 Р.</p>
+                </div>
               </div>
-            </div>
-            <a class="additional-card__button button" href="#">Заказать</a>
-          </article>
-        </li>
-        <li class="additional-products__item">
-          <article class="additional-card">
-            <div class="additional-card__value-wrapper">
-              <h3 class="additional-card__title">Витамины</h3>
-              <div class="additional-card__description">
-                <p class="additional-card__value">1 упаковка (30 г)</p>
-                <p class="additional-card__price">300 Р.</p>
+              <a class="additional-card__button button" href="#">Заказать</a>
+            </article>
+          </li>
+          <li class="additional-products__item">
+            <article class="additional-card">
+              <div class="additional-card__value-wrapper">
+                <h3 class="additional-card__title">Витамины</h3>
+                <div class="additional-card__description">
+                  <p class="additional-card__value">1 упаковка (30 г)</p>
+                  <p class="additional-card__price">300 Р.</p>
+                </div>
               </div>
-            </div>
-            <a class="additional-card__button button" href="#">Заказать</a>
-          </article>
-        </li>
-      </ul>
-      <div class="additional-products__gift">
-        <p class="additional-products__gift-title">Закажите все<br> и получите чехол для кота в подарок!</p>
+              <a class="additional-card__button button" href="#">Заказать</a>
+            </article>
+          </li>
+        </ul>
+        <div class="additional-products__gift">
+          <p class="additional-products__gift-title">Закажите все<br> и получите чехол для кота в подарок!</p>
+        </div>
       </div>
     </div>
   </section>
 </main>
 <footer class="footer">
   <section class="footer__collaboration collaboration">
-    <div class="collaboration__wrapper">
-      <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
-      <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    <div class="collaboration__wrapper collaboration__wrapper--index">
+      <h2 class="collaboration__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
+      <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 <span class="collaboration__address--city">Санкт-Петербург</span>
+      </p>
     </div>
-    <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" width="320" height="400"
-      alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+    <div class="collaboration__map">
+      <picture class="collaboration__map-container">
+        <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+        <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
+        <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x"
+          alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      </picture>
+    </div>
   </section>
   <div class="footer__social">
     <div class="container">
