Сделал индекс и каталог(не добавил пин на карту)

--- a/source/index.html
+++ b/source/index.html
@@ -148,7 +148,7 @@
           <div class="example__illustration-toggle">
             <button class="example__illustration-button" type="button">Было</button>
             <div class="example__illustration-scale">
-              <div class="example__illustration-bar example__illustration-bar--after"></div>
+              <div class="example__illustration-bar"></div>
             </div>
             <button class="example__illustration-button" type="button">Стало</button>
           </div>
