--- a/source/form.html
+++ b/source/form.html
@@ -126,14 +126,19 @@
   </main>
   <footer class="footer">
     <section class="footer__collaboration collaboration">
-      <div class="container">
-        <div class="collaboration__wrapper">
-          <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
-          <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        </div>
+      <div class="collaboration__wrapper collaboration__wrapper--index">
+        <h2 class="collaboration__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
+        <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 <span class="collaboration__address--city">Санкт-Петербург</span>
+        </p>
       </div>
-      <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" width="320" height="400"
-        alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      <div class="collaboration__map">
+        <picture class="collaboration__map-container">
+          <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
+          <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x"
+            alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        </picture>
+      </div>
     </section>
     <div class="footer__social">
       <div class="container">
